--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "node index.js --host 0.0.0.0 --port 3001",
     "start": "node index.js --host 0.0.0.0 --port 3000"
   },
+  "scripts": {
+  "build": "cd web && npm run build",
+  "start": "npm run build && cd .. && npm start"
+},
   "author": "Shakib",
   "license": "MIT",
   "dependencies": {
