--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+    "engines": {
+    "node": "9.5.1"
+  },
   "scripts": {
     "test": "node index.js --host 0.0.0.0 --port 3001",
     "start": "node index.js --host 0.0.0.0 --port 3000"
