--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "9.5.1"
   },
   "scripts": {
-    "test": "node index.js --host 0.0.0.0 --port 3001",
-    "start": "node index.js --host 0.0.0.0 --port 3000"
+    "start": "node index.js"
   },
   "author": "Shakib",
   "license": "MIT",
